# paparazzi-rust

./: Cargo.toml  NOTICE  README.md  framework-guide.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: ci.yml
crates/pprz-config/: Cargo.toml
crates/pprz-config/src/: lib.rs
crates/pprz-math/: Cargo.toml
crates/pprz-math/src/: lib.rs
crates/pprz-messages/: Cargo.toml
crates/pprz-messages/src/: lib.rs
crates/pprz-protocol/: Cargo.toml
crates/pprz-protocol/src/: lib.rs
crates/pprz-sim/: Cargo.toml
crates/pprz-sim/src/: lib.rs
docs/: architecture.md  compatibility.md  definition-of-done.md  migration-plan.md  progress-report.md  project-brief.md  safety-scope.md  upstream-baseline.md
