[workspace]
members = [
  "crates/pprz-protocol",
  "crates/pprz-config",
  "crates/pprz-math",
  "crates/pprz-messages",
  "crates/pprz-sim",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/skundalkar/paparazzi-rust"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
